# Magnetio

./: .gitignore  CMakeLists.txt  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
Magnetio/src/: gui  gui.c
include/: gui.h  main.h
src/: gui  gui.c  magnet.c  main.c
